[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#time = "0.3.9" # generate timestamp
chrono = "0.4.19"
serde = "1.0" # serialize and deserialize data to and from json format
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.2" # hash values from data